--- a/views/pages/admin/location/list.ejs
+++ b/views/pages/admin/location/list.ejs
@@ -6,7 +6,7 @@
         <div class="card-title"><%= title %></div>
         <a href='create' class='btn btn-primary btn-round ml-md-auto float-right'>Add Location</a>
       </div>
-      <div class="card-body daterangepickerbody">
+      <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
         <table class="display table table-striped table-hover dateRangeFilterTable dataTable location-table ">
           <thead>
