--- a/views/pages/warehouse/manifest/incoming.ejs
+++ b/views/pages/warehouse/manifest/incoming.ejs
@@ -7,6 +7,8 @@
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Create Manifest</a>
       </div>
       <div class="card-body daterangepickerbody">
+          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
+          <input type="hidden" name="filter" id="filter" value="<%=filter%>">
         <div class="table-responsive">
         <table class="display table table-striped table-hover dateRangeFilterTable dataTable manifest-table">
           <thead>
