--- a/views/pages/warehouse/awb/no-docs-packages.ejs
+++ b/views/pages/warehouse/awb/no-docs-packages.ejs
@@ -95,6 +95,7 @@
                         <!-- Nodocs -->
                         <!-- <div class="tab-pane fade" id="awb-no-docs" role="tabpanel" aria-labelledby="awb-no-docs-tab"> -->
                           <div class="table-responsive">
+                            <input type="hidden" name="clear" id="clear" value="<%=clear%>">
                             <table id='no-docs-table' class='display no-docs-table table table-striped table-hover dateRangeFilterTable dataTable'>
                               <thead>
                                 <tr>
@@ -202,6 +203,8 @@ style="display: none;">
   </div>
 </div>
 </div>
-
+<script>
+  var pageUrl = page ? page: '';
+</script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/awb/no-docs-packages.js"></script>')%>
