--- a/views/pages/warehouse/package/aging.ejs
+++ b/views/pages/warehouse/package/aging.ejs
@@ -8,8 +8,9 @@
                     </div>
                     <!-- <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a> -->
                 </div>
-                <div class="card-body">
+                <div class="card-body daterangepickerbody">
                     <div class="table-responsive">
+                        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
                         <table id="package-table" class="display table table-striped table-hover dataTable package-table">
                             <thead>
                                 <tr>
@@ -130,7 +131,9 @@
             </div>
         </div>
     </div>
-
+    <script> 
+        var pageUrl = "<%=page ? page :''%>";
+    </script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.2.0/sweetalert2.all.min.js"></script> -->
     <% block('scripts').append('<script src="/js/utils.js"></script>')%>
         <% block('scripts').append('<script src="/js/warehouse/package/list.js"></script>')%>
