--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -24,7 +24,8 @@
               <table  class="display table table-striped table-hover dataTable invoice-table ">
                 <thead>
                   <tr>
-                    <th>Awb Number</th>
+                    <th>File Name</th>
+                    <th>AWB Number</th>
                     <th>Date Uploaded</th>
                     <th>Invoice</th>
                     <th>Tracking #</th>
@@ -43,6 +44,7 @@
                   <table style="width: 100%" class="display table table-striped table-hover dataTable no-awb-invoice-table ">
                     <thead>
                       <tr>
+                        <th>File Name</th>
                         <th>Date Uploaded</th>
                         <th>Invoice</th>
                         <th>Tracking #</th>
