--- a/views/pages/warehouse/delivery/list.ejs
+++ b/views/pages/warehouse/delivery/list.ejs
@@ -10,6 +10,7 @@
                     <a href='create' class='btn btn-primary btn-round float-right ml-md-auto text-white' data-toggle='modal' data-target='#addDelivery'>Create Delivery</a>
                 </div>
                 <div class="card-body daterangepickerbody">
+                    <input type="hidden" name="clear" id="clear" value="<%=clear%>">
                     <div class="table-responsive">
                     <table class="display table table-striped table-hover dateRangeFilterTable dataTable delivery-table">
                         <thead>
