--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -61,6 +61,7 @@
       </div>
       </div>
       <div class="card-body daterangepickerbody">
+        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive p-4">
         <table id = "package-table" class="display dateRangeFilterTable table table-striped table-hover dataTable package-table">
           <thead>
@@ -335,5 +336,8 @@
     </div>
   </div>
 </div>
+<script> 
+  var pageUrl = "<%=page ? page :''%>";
+</script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/package/list-all.js"></script>')%>
