--- a/views/pages/fleet/vehicle/list.ejs
+++ b/views/pages/fleet/vehicle/list.ejs
@@ -8,7 +8,7 @@
           <a href='create' class='btn btn-primary btn-round float-right'>Add Vehicle</a>
         </div>
       </div>
-      <div class="card-body daterangepickerbody">
+      <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
         <table class="display table table-striped table-hover dateRangeFilterTable dataTable vehicle-table">
           <thead>
