--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -22,6 +22,7 @@
         <div class="card-title"><%= title %></div>
       </div>
       <div class="card-body daterangepickerbody">
+          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
           <table id="pricelabel-table"
             class="display table table-striped table-hover dataTable dateRangeFilterTable pricelabel-table">
