--- a/views/pages/warehouse/carrier/list.ejs
+++ b/views/pages/warehouse/carrier/list.ejs
@@ -6,7 +6,7 @@
         <div class="card-title"><%=title%></div>
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add New Carrier</a>
       </div>
-      <div class="card-body daterangepickerbody">
+      <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
           <table id="carrierTable" class="display table table-striped dateRangeFilterTable table-hover">
             <thead>
