--- a/views/pages/warehouse/cube/list.ejs
+++ b/views/pages/warehouse/cube/list.ejs
@@ -11,6 +11,7 @@
         >Add Cube2</button>        
       </div>
       <div class="card-body daterangepickerbody">
+          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
           <table id="cubeTable" class="display table dataTable table-striped dateRangeFilterTable table-hover">
             <thead>
