--- a/views/pages/warehouse/service-type/list.ejs
+++ b/views/pages/warehouse/service-type/list.ejs
@@ -6,7 +6,7 @@
         <div class="card-title"><%=title%></div>
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add New Service Type</a>
       </div>
-      <div class="card-body daterangepickerbody">
+      <div class="card-body daterangepickerbody-1">
         <div class="table-responsive">
           <table id="service-typeTable" class="display dataTable dateRangeFilterTable table table-striped table-hover">
             <thead>
