--- a/views/pages/warehouse/awb/no-docs.ejs
+++ b/views/pages/warehouse/awb/no-docs.ejs
@@ -41,7 +41,7 @@
               <td><%=(awb.shipper && awb.shipper.name) ?awb.shipper.name : '' %></td>
               <td><%=(awb.carrier && awb.carrier.name) ? awb.carrier.name : '' %></td>
               <td><%=awb.packages.length %></td>
-              <td><%=awb.weight %></td>
+              <td><%=awb.weight ? (awb.weight).toFixed(2) : '0'%></td>
               <td>
                 <!-- <a href='manage/<%=awb._id%>/get' class="btn btn-link btn-primary p-1" data-toggle="tooltip"
                   data-original-title="Edit"> <i class="fa fa-pencil-alt"></i> </a> -->
@@ -128,5 +128,9 @@
     </div>
   </div>
 </div>
+<script>
+  var pageUrl = "<%=page ? page :''%>";
+  
+  </script>
 
 <% block('scripts').append('<script src="/js/warehouse/awb/list.js"></script>')%>
