date range in package

--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -63,7 +63,7 @@
       <div class="card-body daterangepickerbody">
         <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive p-4">
-        <table id = "package-table" class="display dateRangeFilterTable table table-striped table-hover dataTable package-table">
+        <table id = "package-table" class="display  table table-striped table-hover dataTable package-table">
           <thead>
             <tr>
               <th><input id="checkall" type="checkbox" class="package-select-all" /></th>
