--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -11,7 +11,7 @@
                 <div class="card-body daterangepickerbody">
                     <input type="hidden" name="clear" id="clear" value="<%=clear%>">
                     <div class="table-responsive">
-                        <table id="package-table" class="display table table-striped table-hover dateRangeFilterTable dataTable package-table">
+                        <table id="package-table" class="display table table-striped table-hover  dataTable package-table">
                             <thead>
                                 <tr>
                                     <th>Customer Name</th>
