--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -25,6 +25,7 @@
                 <thead>
                   <tr>
                     <th>File Name</th>
+                    <th>Extension</th>
                     <th>AWB Number</th>
                     <th>Date Uploaded</th>
                     <th>Invoice</th>
@@ -45,6 +46,7 @@
                     <thead>
                       <tr>
                         <th>File Name</th>
+                        <th>Extension</th>
                         <th>Date Uploaded</th>
                         <th>Invoice</th>
                         <th>Tracking #</th>
