actual filename invoice

--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -24,6 +24,7 @@
               <table  class="display table table-striped table-hover dataTable invoice-table ">
                 <thead>
                   <tr>
+                    <th>Actual File Name</th>
                     <th>File Name</th>
                     <th>Extension</th>
                     <th>AWB Number</th>
@@ -45,6 +46,7 @@
                   <table style="width: 100%" class="display table table-striped table-hover dataTable no-awb-invoice-table ">
                     <thead>
                       <tr>
+                        <th>Actual File Name</th>
                         <th>File Name</th>
                         <th>Extension</th>
                         <th>Date Uploaded</th>
