committing changes for shipper issue

--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -422,7 +422,7 @@
           <div class='form-group row'>
             <label for="shipper-zip" class="col-md-3 mt-sm-2 text-right">Zip</label>
             <div class="col-md-8">
-              <input type='text' class='form-control' placeholder="Zip" id='shipper-zip' name="zip" />
+              <input type='text' class='form-control' placeholder="Zip" id='shipper-zip' name="zipcode" />
             </div>
           </div>
         </div>
