--- a/views/pages/warehouse/shipper/create.ejs
+++ b/views/pages/warehouse/shipper/create.ejs
@@ -35,6 +35,12 @@
               <input type="tel" class="form-control" id="fax" name="fax" placeholder="(xxx)-xxx-xxxx">
             </div>
           </div>
+          <div class='form-group row'>
+            <label for="shipper-tax" class="col-md-3 mt-sm-2 text-right">Tax ID</label>
+            <div class="col-md-8">
+              <input type='text' class='form-control' placeholder="xxx-xxx-xxxx" id='shipper-tax' name="tax" />
+            </div>
+          </div>
           <div class="form-group form-show-validation row">
             <label for="email" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Email address</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
