--- a/views/pages/warehouse/shipper/edit.ejs
+++ b/views/pages/warehouse/shipper/edit.ejs
@@ -40,6 +40,12 @@
                 value="<%=shipper.fax%>">
             </div>
           </div>
+          <div class='form-group row'>
+            <label for="shipper-tax" class="col-md-3 mt-sm-2 text-right">Tax ID</label>
+            <div class="col-md-8">
+              <input type='text' class='form-control' placeholder="xxx-xxx-xxxx" id='shipper-tax' name="tax" value="<%=shipper.tax%>" />
+            </div>
+          </div>
           <div class="form-group form-show-validation row">
             <label for="email" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Email address</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
