committing changes for decimal issue

--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -147,7 +147,7 @@
                   </div>
                   <div class="col-md-6 col-sm-12">
                     <label>Value</label>
-                    <input type="number" class="form-control" name="invoice.value" />
+                    <input type="text" class="form-control" name="invoice.value" />
                   </div>
                   <div class="col-md-12">
                     <div class="custom-file-container" data-upload-id="invoice-upload-field-{CID}">
