--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -1,6 +1,14 @@
 <% layout('./shared/__template')%>
 <script src="/js/jquery.js"></script>
 <script src="/assets/js/plugin/datatables/datatables.min.js"></script>
+<%
+var endate = new Date();      
+        endate.setDate(endate.getDate());
+        var stdate = new Date();
+        stdate.setDate(stdate.getDate() -21);      
+        var dateRangeDefault = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+        (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear(); 
+%>
 
 <div class="row mt--2">
   <div class="col-md-6">
@@ -72,6 +80,7 @@
   </div>
 
 </div>
+<input type="hidden" name="typeTable" id="typeTable" value="<%=query.type?query.type:dateRangeDefault%>">
 <div class="row">
   <div class="col-md-12">
     <div class="card full-height">
@@ -123,7 +132,11 @@
           </div>
         </div>
       </div>
-      <div class="card-body daterangepickerbody">
+      <div class="card-body">
+        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
+          <label class="w-10-rem align-text-bottom">Select Dates : </label>
+          <input type="text" class="form-control form-control-sm" name="" id="daterange-postbox" value="<%=(query.daterange && query.type=='postbox')? query.daterange: dateRangeDefault%>"  placeholder="Select dates"/>
+        </div>
         <div class="table-responsive">
           <table id="post_packages" class="display table table-striped table-hover dataTable manifest-table">
             <thead>
@@ -193,9 +206,12 @@
         </div>
       </div>
     </div>
-    <div class="card-body daterangepickerbody">
-      <div class="table-responsive">
-        
+    <div class="card-body daterangepickerbody-1">
+      <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
+        <label class="w-10-rem align-text-bottom">Select Dates : </label>
+        <input type="text" class="form-control form-control-sm" name="" id="daterange-nineToPackages" value="<%=(query.daterange && query.type=='nineToPackages')? query.daterange: dateRangeDefault%>"  placeholder="Select dates"/>
+      </div>
+      <div class="table-responsive">        
         <table id="9to5packages" class="display table table-striped table-hover dataTable manifest-table">
           <thead>
           <tr>
@@ -265,7 +281,11 @@
           </div>
         </div>
       </div>
-      <div class="card-body daterangepickerbody">
+      <div class="card-body daterangepickerbody-1">
+        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
+          <label class="w-10-rem align-text-bottom">Select Dates : </label>
+          <input type="text" class="form-control form-control-sm" name="" id="daterange-noDocs" value="<%=(query.daterange && query.type=='noDocs')? query.daterange: dateRangeDefault%>"  placeholder="Select dates"/>
+        </div>
         <div class="table-responsive">
           <table id="no_docs_packages" class="display table table-striped table-hover dataTable manifest-table">
             <thead>
@@ -295,7 +315,11 @@
           <div class="card-title pd-18 col-md-2">Users </div>
         </div>
       </div>
-      <div class="card-body daterangepickerbody">
+      <div class="card-body">
+        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
+          <label class="w-10-rem align-text-bottom">Select Dates : </label>
+          <input type="text" class="form-control form-control-sm" name="" id="daterange-user" value="<%=(query.daterange && query.type=='user')? query.daterange: dateRangeDefault%>"  placeholder="Select dates"/>
+        </div>
       <div class="table-responsive ">
         <table id="user_table" class=" display table table-striped table-hover dataTable ">
           <thead>
@@ -337,21 +361,27 @@
       }
     })
   }
-  $.ajax({
-    url: '/api/warehouse/get_packages_filter/all',
-    dataType: "json",
-    type: "GET",
-    success: function (data) {
-      let nineToPackages = data.nineToPackages;
-      let noDocs = data.noDocs;
-      let postBox = data.postBox;
-      let users = data.users;
-      data9to5(nineToPackages);
-      dataNoDocs(noDocs);
-      dataPostBox(postBox);
-      usersData(users);
+  //setTimeout(function(){
+    var daterangeval = $('#daterange-postbox').val();
+    if($("#typeTable").val()){
+      daterangeval = '<%=query.daterange? query.daterange : ""%>';
     }
-  })
+    $.ajax({
+      url: '/api/warehouse/get_packages_filter/all?daterange='+daterangeval+'&type='+'<%=query.type?query.type:""%>',
+      dataType: "json",
+      type: "GET",
+      success: function (data) {
+        let nineToPackages = data.nineToPackages;
+        let noDocs = data.noDocs;
+        let postBox = data.postBox;
+        let users = data.users;
+        data9to5(nineToPackages);
+        dataNoDocs(noDocs);
+        dataPostBox(postBox);
+        usersData(users);
+      }
+    })
+ // },1000);
 
   $(document).ready(function() {
     setTimeout(()=>{
@@ -367,8 +397,90 @@
         (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear()      
         $('.daterange').val(dateRange)
         }	   
-},100) 
-})  
+},100);
+
+  $('#daterange-postbox').on('apply.daterangepicker', function (ev, picker) {
+   var daterange = picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY');  
+    window.location.href = "/dashboard?type=postbox&daterange="+daterange;
+  }); 
+  $('#daterange-postbox').on('cancel.daterangepicker', function (ev, picker) {
+        var endate = new Date();      
+        endate.setDate(endate.getDate());
+        var stdate = new Date();
+        stdate.setDate(stdate.getDate() -14);      
+        var dateRange = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+        (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear();  
+       window.location.href = "/dashboard?type=postbox&daterange="+dateRange;
+  });
+
+  $('#daterange-nineToPackages').on('apply.daterangepicker', function (ev, picker) {
+   var daterange = picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY');  
+    window.location.href = "/dashboard?type=nineToPackages&daterange="+daterange;
+  }); 
+  $('#daterange-nineToPackages').on('cancel.daterangepicker', function (ev, picker) {
+        var endate = new Date();      
+        endate.setDate(endate.getDate());
+        var stdate = new Date();
+        stdate.setDate(stdate.getDate() -14);      
+        var dateRange = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+        (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear();  
+       window.location.href = "/dashboard?type=nineToPackages&daterange="+dateRange;
+  });
+
+  $('#daterange-noDocs').on('apply.daterangepicker', function (ev, picker) {
+   var daterange = picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY');  
+    window.location.href = "/dashboard?type=noDocs&daterange="+daterange;
+  }); 
+  $('#daterange-noDocs').on('cancel.daterangepicker', function (ev, picker) {
+        var endate = new Date();      
+        endate.setDate(endate.getDate());
+        var stdate = new Date();
+        stdate.setDate(stdate.getDate() -14);      
+        var dateRange = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+        (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear();  
+       window.location.href = "/dashboard?type=noDocs&daterange="+dateRange;
+  });
+
+  $('#daterange-user').on('apply.daterangepicker', function (ev, picker) {
+   var daterange = picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY');  
+    window.location.href = "/dashboard?type=user&daterange="+daterange;
+  }); 
+  $('#daterange-user').on('cancel.daterangepicker', function (ev, picker) {
+        var endate = new Date();      
+        endate.setDate(endate.getDate());
+        var stdate = new Date();
+        stdate.setDate(stdate.getDate() -14);      
+        var dateRange = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+        (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear();  
+       window.location.href = "/dashboard?type=user&daterange="+dateRange;
+  });
+
+
+}) 
+
+
+
+function get_data_dataTable(dataTable, daterange){
+  $.ajax({
+      url: '/api/warehouse/get_packages_filter/all?daterange='+$('#daterange-postbox').val(),
+      dataType: "json",
+      type: "GET",
+      success: function (data) {
+        let nineToPackages = data.nineToPackages;
+        let noDocs = data.noDocs;
+        let postBox = data.postBox;
+        let users = data.users;
+        if(dataTable == "postbox"){
+          dataPostBox(postBox);
+        }
+        //data9to5(nineToPackages);
+        // dataNoDocs(noDocs);
+         
+        // usersData(users);
+      }
+    })
+}
+
 
   function data9to5(data) {
     let result = data.map((row) => {
@@ -418,6 +530,7 @@
 
     $("#post_packages tbody").append(result)
     if (!($.fn.dataTable.isDataTable('#post_packages'))) {
+      
       $("#post_packages").DataTable({ searching: false, "bLengthChange": false, "order": [[ 2, "desc" ]] });
     }
   }
