--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -10,7 +10,8 @@
           <div class="card-title pd-18 col-md-2">All Awb Status</div>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
+        <div class="table-responsive ">
         <table id="awbStatus" class=" display table table-striped table-hover dataTable ">
           <thead>
             <tr>
@@ -23,6 +24,7 @@
           <tbody>
           </tbody>
         </table>
+        </div>
       </div>
     </div>
   </div>
@@ -36,7 +38,8 @@
           <div class="card-title pd-18 col-md-2">Package Status</div>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
+        <div class="table-responsive ">
         <table id="package_status" class=" display table table-striped table-hover dataTable ">
           <thead>
             <tr>
@@ -47,6 +50,7 @@
           <tbody>
           </tbody>
         </table>
+        </div>
       </div>
     </div>
   </div>
@@ -102,7 +106,8 @@
         </div>
       </div>
     </div>
-    <div class="card-body">
+    <div class="card-body daterangepickerbody">
+      <div class="table-responsive ">
       <table id="all_package_table" class=" display table table-striped table-hover dataTable ">
         <thead>
           <tr>
@@ -115,6 +120,7 @@
         <tbody>
         </tbody>
       </table>
+      </div>
     </div>
   </div>
 </div>
@@ -128,7 +134,8 @@
           <div class="card-title pd-18 col-md-2">Delivery Detail</div>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
+        <div class="table-responsive ">
         <table id="delivery_table" class=" display table table-striped table-hover dataTable ">
           <thead>
             <tr>
@@ -142,6 +149,7 @@
           <tbody>
           </tbody>
         </table>
+        </div>
       </div>
     </div>
   </div>
