--- a/views/pages/warehouse/cube/cubeAwb.ejs
+++ b/views/pages/warehouse/cube/cubeAwb.ejs
@@ -50,6 +50,12 @@
                   value="<%= cube.description%>"/>
               </div>
             </div>
+            <div class='form-group form-show-validation row'>
+                <label for="Weight" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Cube Weight</label>
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                    <input type='number' class='form-control' id='weight' name='weight'  placeholder="Weight" value="<%= cube.weight%>" />
+                </div>
+            </div>
             <div class="form-group form-show-validation row">
               <label for="Dimensions" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Cube Dimensions</label>
               <div class="col-lg-8 col-md-8 col-sm-8">
