report with customer package

--- a/views/pages/customer/package/list-all.ejs
+++ b/views/pages/customer/package/list-all.ejs
@@ -61,6 +61,7 @@
       </div>
       </div>
       <div class="card-body daterangepickerbody">
+        <input type="hidden" name="clear" id="clear" value="<%=query.clear ? query.clear : ''%>">
         <div class="table-responsive p-4">
         <table id = "package-table" class="display dateRangeFilterTable table table-striped table-hover dataTable package-table">
           <thead>
