--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -1,6 +1,14 @@
 <% layout('./shared/__template')%>
 <script src="/js/jquery.js"></script>
 <script src="/assets/js/plugin/datatables/datatables.min.js"></script>
+<%
+var endate = new Date();      
+        endate.setDate(endate.getDate());
+        var stdate = new Date();
+        stdate.setDate(stdate.getDate() -21);      
+        var dateRangeDefault = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+        (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear(); 
+%>
 
 <div class="row">
   <div class="col-md-12">
@@ -10,7 +18,11 @@
           <div class="card-title pd-18 col-md-2">All Awb Status</div>
         </div>
       </div>
-      <div class="card-body daterangepickerbody">
+      <div class="card-body daterangepickerbody-1">
+        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
+          <label class="w-10-rem align-text-bottom">Select Dates : </label>
+          <input type="text" class="form-control form-control-sm" name="" id="daterange-awbStatus" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
+        </div>
         <div class="table-responsive ">
         <table id="awbStatus" class=" display table table-striped table-hover dataTable ">
           <thead>
@@ -38,7 +50,11 @@
           <div class="card-title pd-18 col-md-2">Package Status</div>
         </div>
       </div>
-      <div class="card-body daterangepickerbody">
+      <div class="card-body daterangepickerbody-1">
+        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
+          <label class="w-10-rem align-text-bottom">Select Dates : </label>
+          <input type="text" class="form-control form-control-sm" name="" id="daterange-package-status" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
+        </div>
         <div class="table-responsive ">
         <table id="package_status" class=" display table table-striped table-hover dataTable ">
           <thead>
@@ -106,7 +122,11 @@
         </div>
       </div>
     </div>
-    <div class="card-body daterangepickerbody">
+    <div class="card-body daterangepickerbody-1">
+      <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
+        <label class="w-10-rem align-text-bottom">Select Dates : </label>
+        <input type="text" class="form-control form-control-sm" name="" id="daterange-package-detail" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
+      </div>
       <div class="table-responsive ">
       <table id="all_package_table" class=" display table table-striped table-hover dataTable ">
         <thead>
@@ -134,7 +154,11 @@
           <div class="card-title pd-18 col-md-2">Delivery Detail</div>
         </div>
       </div>
-      <div class="card-body daterangepickerbody">
+      <div class="card-body daterangepickerbody-1">
+        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
+          <label class="w-10-rem align-text-bottom">Select Dates : </label>
+          <input type="text" class="form-control form-control-sm" name="" id="daterange-dekivery-detail" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
+        </div>
         <div class="table-responsive ">
         <table id="delivery_table" class=" display table table-striped table-hover dataTable ">
           <thead>
@@ -174,7 +198,7 @@
     })
   }
   $.ajax({
-    url: '/api/warehouse/get_packages_data/all',
+    url: '/api/warehouse/get_packages_data/all?daterange=<%=dateRangeDefault%>',
     dataType: "json",
     type: "GET",
     success: function (data) {
@@ -184,6 +208,91 @@
       deliveryData(data[3])
     }
   })
+  //date range picker
+  $(document).ready(function() {
+    $('#daterange-awbStatus').on('apply.daterangepicker', function (ev, picker) {
+    var daterange = picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY');  
+    getAwbdata(daterange,'awbStatus');
+    });
+    $('#daterange-awbStatus').on('cancel.daterangepicker', function (ev, picker) {
+        var endate = new Date();      
+        endate.setDate(endate.getDate());
+        var stdate = new Date();
+        stdate.setDate(stdate.getDate() -14);      
+        var dateRange = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+        (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear();  
+        $("#daterange-awbStatus").val(dateRange)
+        getAwbdata(dateRange,'awbStatus');
+    });
+    
+    $('#daterange-package-detail').on('apply.daterangepicker', function (ev, picker) {
+    var daterange = picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY');  
+    getAwbdata(daterange,'packageDetail');
+    });
+    $('#daterange-package-detail').on('cancel.daterangepicker', function (ev, picker) {
+        var endate = new Date();      
+        endate.setDate(endate.getDate());
+        var stdate = new Date();
+        stdate.setDate(stdate.getDate() -14);      
+        var dateRange = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+        (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear();  
+        $("#daterange-package-detail").val(dateRange)
+        getAwbdata(dateRange,'packageDetail');
+    });
+
+    $('#daterange-dekivery-detail').on('apply.daterangepicker', function (ev, picker) {
+      var daterange = picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY');  
+      getAwbdata(daterange,'deliveryDetail');
+    });
+    $('#daterange-dekivery-detail').on('cancel.daterangepicker', function (ev, picker) {
+        var endate = new Date();      
+        endate.setDate(endate.getDate());
+        var stdate = new Date();
+        stdate.setDate(stdate.getDate() -14);      
+        var dateRange = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+        (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear();  
+        $("#daterange-dekivery-detail").val(dateRange)
+        getAwbdata(dateRange,'deliveryDetail');
+    });
+
+    $('#daterange-package-status').on('apply.daterangepicker', function (ev, picker) {
+      var daterange = picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY');  
+      getAwbdata(daterange,'packageStatus');
+    });
+    $('#daterange-package-status').on('cancel.daterangepicker', function (ev, picker) {
+        var endate = new Date();      
+        endate.setDate(endate.getDate());
+        var stdate = new Date();
+        stdate.setDate(stdate.getDate() -14);      
+        var dateRange = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+        (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear();  
+        $("#daterange-package-status").val(dateRange)
+        getAwbdata(dateRange,'packageStatus');
+    });
+  }) 
+  
+
+  function getAwbdata(daterange, type){
+    $.ajax({
+      url: '/api/warehouse/get_packages_data/all?type='+type+'&daterange='+daterange,
+      dataType: "json",
+      type: "GET",
+      success: function (data) {
+        if(type == 'awbStatus'){
+          awbsStatus(data[0]);
+        }
+        if(type == "packageDetail"){
+          allPackages(data[2])
+        }
+        if(type == "deliveryDetail"){
+          deliveryData(data[3])
+        }
+        if(type == "packageStatus"){
+          packageStatus(data[1])
+        }       
+      }
+    })
+  }
 
   function awbsStatus(data) {
     let result = data.map((row) => {
@@ -199,7 +308,7 @@
     if ($("#awbStatus > tbody > tr").length) {
       $("#awbStatus > tbody > tr").empty();
     }
-
+    $("#awbStatus").DataTable().destroy();
     $("#awbStatus tbody").html("")
     $("#awbStatus tbody").append(result)
     if (!($.fn.dataTable.isDataTable('#awbStatus'))) {
@@ -257,7 +366,8 @@
     if ($("#all_package_table > tbody > tr").length) {
       $("#all_package_table > tbody > tr").empty();
     }
-
+    $("#all_package_table").DataTable().destroy();
+    $("#all_package_table tbody").html("");
     $("#all_package_table tbody").append(result)
     if (!($.fn.dataTable.isDataTable('#all_package_table'))) {
       $("#all_package_table").DataTable({ searching: false, "bLengthChange": false });
@@ -275,11 +385,13 @@
           `</td></tr>`;
       }
     })
-
+    
     if ($("#delivery_table > tbody > tr").length) {
       $("#delivery_table > tbody > tr").empty();
     }
-
+    $("#delivery_table").DataTable().destroy();
+    $("#delivery_table tbody").html("");
+    
     $("#delivery_table tbody").append(result)
     if (!($.fn.dataTable.isDataTable('#delivery_table'))) {
       $("#delivery_table").DataTable({ searching: true, "bLengthChange": true });
