--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -21,6 +21,8 @@
         <div class="tab-content m-4" id="awb-list-tabContent">
           <div class="tab-pane fade show active" id="awb-invoice" role="tabpanel" aria-labelledby="awb-invoice-tab">
             <div class="table-responsive" >
+                <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
+                <input type="hidden" name="clear" id="clear" value="<%=clear%>">
               <table  class="display table table-striped table-hover dataTable invoice-table ">
                 <thead>
                   <tr>
