--- a/views/pages/customerDashboard.ejs
+++ b/views/pages/customerDashboard.ejs
@@ -22,6 +22,7 @@
         <div class="card-title"><%= title %></div>
       </div>
       <div class="card-body daterangepickerbody">
+          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive p-4">
           <table id="package-table"
             class="display dateRangeFilterTable table table-striped table-hover dataTable package-table">
@@ -238,4 +239,4 @@
   </div>
 </div>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
-<% block('scripts').append('<script src="/js/warehouse/package/list-all.js"></script>')%>
+<% block('scripts').append('<script src="/js/customer/home/list.js"></script>')%>
