--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -73,7 +73,7 @@
           </div>
           <div class="tab-pane fade" id="no-awb-invoice" role="tabpanel" aria-labelledby="no-awb-tab">
               <div class="table-responsive">
-                  <table class="display table table-striped table-hover dateRangeFilterTable dataTable no-awb-invoice-table ">
+                  <table class="display table table-striped table-hover  dataTable no-awb-invoice-table ">
                     <thead>
                       <tr>
                         <th>Actual File Name</th>
